flask_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: flask-app
  labels:
    app: flask
spec:
  ports:
  - port: 5000
  selector:
    app: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: flask-app
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: bkrmdahal/flask_app:0.5.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5000
